# warehouse-object-tracking-api

./: README.md  docker-compose.yml
artifacts/: anomaly_detection_tabular.pkl  (+3 more)
platform/: README.md  pyproject.toml
platform/data/dummy/: demand_history.csv  inventory_history.csv  slotting_data.csv  telemetry_data.csv  warehouse_sop.txt
platform/src/warehouse_ai/: __init__.py
platform/src/warehouse_ai/api/: app.py  auth.py  control_plane.py  schemas.py
platform/src/warehouse_ai/config/: settings.py
platform/src/warehouse_ai/core/: __init__.py  events.py  schemas.py
platform/src/warehouse_ai/data/: __init__.py  feature_store.py  lineage.py  validation.py
platform/src/warehouse_ai/engines/: __init__.py  base.py
platform/src/warehouse_ai/engines/anomaly_detection/: __init__.py  engine.py
platform/src/warehouse_ai/engines/computer_vision/: __init__.py  engine.py
platform/src/warehouse_ai/engines/copilot/: __init__.py  engine.py
platform/src/warehouse_ai/engines/demand_forecasting/: __init__.py  engine.py
platform/src/warehouse_ai/engines/inventory_optimization/: __init__.py  engine.py
platform/src/warehouse_ai/engines/pick_path/: __init__.py  engine.py
platform/src/warehouse_ai/engines/predictive_maintenance/: __init__.py  engine.py
platform/src/warehouse_ai/mlops/: __init__.py  drift.py  experiments.py  registry.py
platform/src/warehouse_ai/simulator/: __init__.py  generator.py  realtime.py  streaming.py
platform/src/warehouse_ai/utils/: rl.py
platform/src/warehouse_ai_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+48 files in other folders)
