[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-ai-platform"
version = "0.1.0"
description = "AI-first warehouse intelligence platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=1.10,<3",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "networkx>=3.0.0",
  "torch>=2.0.0",
  "typing-extensions>=4.9.0",
  "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
mlops = [
  "mlflow>=2.12.0",
  "great-expectations",
]
vision = [
  "ultralytics>=8.2.0",
  "transformers>=4.40.0",
  "faiss-cpu>=1.7.4",
  "pillow>=10.0.0",
]
ops = [
  "redis>=5.0.0",
  "aiokafka>=0.10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["../tests"]

